# bmstu-prog

Sem1/Hw2/t1/: Project.dpr
Sem1/Hw2/t2/: Project.dpr
Sem1/Hw2/t3/: Project.dpr
Sem1/Lab1/: Project1.dpr  task.txt
Sem1/Lab10/: DealType.pas  IEDB.dpr  IEDB.dproj  ImportExport.db  Main.dfm  Main.pas  SimpleDB.pas
Sem1/Lab2/: Project.dpr  task.txt
Sem1/Lab3/: Project1.dpr  Project1.dproj  task.txt
Sem1/Lab4/: Project1.dpr  task.txt
Sem1/Lab5/: Project.dpr  task.txt
Sem1/Lab6/: Project.dpr  task.txt
Sem1/Lab7/: Project.dpr  task.txt
Sem1/Lab8/: Project.dpr  Project.dproj  task.txt
Sem1/Lab9/: Project.dpr  task.txt
Sem2/lab1/: main.cpp
Sem2/lab10/: Lab10.pro  dialog.cpp  dialog.h  dialog.ui  drawerwidget.cpp  drawerwidget.h  ellipsoid.cpp  ellipsoid.h  hyperboloid.cpp  hyperboloid.h  main.cpp  weirdthing.cpp  weirdthing.h
Sem2/lab2/: main.cpp
Sem2/lab3/: main.cpp
Sem2/lab5/: main.cpp
Sem2/lab6/: main.cpp  tree.cpp  tree.h
Sem2/lab7/: CMakeLists.txt  main.cpp  number.h  qt.cpp  qt.h  stl.cpp  stl.h
Sem2/lab8/: main.cpp  mynumber.h  mystack.h
Sem2/pract2/: main.cpp  vector.cpp  vector.h
Sem2/pract3/: animalstuff.h  mainwidget.cpp  mainwidget.h  pract3.pro  proxymodel.cpp  proxymodel.h  tablemodel.cpp  tablemodel.h
Sem3/: .gitignore
Sem3/lr1/: no-css.html
Sem3/lr3/: print-tree.css  print-tree.js
Sem3/lr4/: cart.css
Sem3/lr5/: part1_src.rb  part1_test.rb  part1_user.rb  part2_src.rb  part2_test.rb  part2_user.rb
Sem3/lr6/p1/: src.rb  (+2 more)
Sem3/lr8_app/: package.json
Sem3/lr_final/: Gemfile  package.json
Sem3/lr_ror/: Gemfile
(+186 files in other folders)
